// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentOutline header blocks present should match snapshot 1`] = `
<div
  className="document-outline"
>
  <ul>
    <TableOfContentsItem
      isValid={true}
      key="0"
      level="H2"
      path={Array []}
      target="#block-c227357f-e92c-4369-83f5-9cf907fe3610"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading parent"
      />
    </TableOfContentsItem>
    <TableOfContentsItem
      isValid={true}
      key="1"
      level="H3"
      path={Array []}
      target="#block-2fcca4f2-1b36-4c26-84ab-d82d0df58ee6"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading child"
      />
    </TableOfContentsItem>
  </ul>
</div>
`;

exports[`DocumentOutline header blocks present should render warnings for multiple h1 headings 1`] = `
<div
  className="document-outline"
>
  <ul>
    <TableOfContentsItem
      isValid={false}
      key="0"
      level="H1"
      path={Array []}
      target="#block-a0d34688-bc48-466e-956e-d7117e460a1c"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading 1"
      />
      <br
        key="incorrect-break-multiple-h1"
      />
      <em
        key="incorrect-message-multiple-h1"
      >
        (Multiple H1 headings are not recommended)
      </em>
    </TableOfContentsItem>
    <TableOfContentsItem
      isValid={false}
      key="1"
      level="H1"
      path={Array []}
      target="#block-a0d34688-bc48-466e-956e-d7117e460a1c"
    >
      <Component
        format="string"
        tagName="span"
        value="Heading 1"
      />
      <br
        key="incorrect-break-multiple-h1"
      />
      <em
        key="incorrect-message-multiple-h1"
      >
        (Multiple H1 headings are not recommended)
      </em>
    </TableOfContentsItem>
  </ul>
</div>
`;
